feat(prod-hardening): push production readiness to 10/10 for extreme traffic
P0 — Critical path resilience:
- Increase service-to-service WebClient pool 64 → 200
- Make RazorpayPaymentGateway fully reactive (remove .block() and Thread.sleep)
- PaymentGateway interface returns Mono<GatewayResult>
- Update all payment tests for reactive contract

P1 — Runtime capacity tuning:
- Increase Tomcat max-threads 100 → 200 across all services
- Increase Lettuce pool max-active 64 → 256
- Tighten Resilience4j failure-rate-threshold 30 → 20
- Increase sliding-window-size 20 → 100

P2 — Observability + backpressure:
- Add Reactor Netty metrics to all services
- Add Kafka consumer concurrency tuning (max-poll-records 1000, listener concurrency 3)
- Increase HikariCP defaults for high-traffic services 20 → 30

Extreme traffic gaps (100K+ RPS):
- Add Redis Cluster and Sentinel support in platform-lib RedisConfig
- Add dynamic HikariCP pool sizing based on CPU/memory (DynamicHikariPoolConfig)
- Add Tomcat max-connections 4096 to all services
- Wire EdgeRateLimitFilter into gateway (already GlobalFilter @Order(-30))
- Extend KafkaPlatformProperties with consumer tuning fields
- Update all 16 service application.yml files with production tuning

Tests: 2,700+ tests pass across all 16 services + platform-lib